Patient Portal Site Login Demo/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>MCC Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Booked</fullName>
        </values>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Refunded</fullName>
        </values>
        <values>
            <fullName>Tentative</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Addtional_Needs__c</fullName>
        <label>Addtional Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adjustment_Amount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjustment_Date__c</fullName>
        <label>Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjustment_Method__c</fullName>
        <label>Adjustment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adjustment_Remarks__c</fullName>
        <label>Adjustment Remarks</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adults__c</fullName>
        <label>Adults</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Date__c</fullName>
        <label>Alternate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approx_of_Guests__c</fullName>
        <label>Approximate # of Guests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Banquet_Type__c</fullName>
        <label>Banquet Type</label>
        <picklist>
            <picklistValues>
                <fullName>Birthday Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bat Mitzvah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Malibu Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar Mitzvah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday Banquet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banquet Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehearsal Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inflatables Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>food tasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweet 16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memorial Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring Formal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehearsal Banquet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anniversary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banquet -- Prom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Ranch House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quinceanera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar &amp; Bat Mitzvah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday Banquet-Luncheon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking Luncheon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter Formal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine Tasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorority Formal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bar_No_of_People__c</fullName>
        <label>Bar No of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bar_Service_Notes__c</fullName>
        <label>Bar Service Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bar_Setup_Fee__c</fullName>
        <label>Bar Setup Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bartender_Cost__c</fullName>
        <label>Bartender Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bartender_Fees__c</fullName>
        <label>Bartender Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ceremony_Fee__c</fullName>
        <label>Ceremony Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ceremony__c</fullName>
        <label>Ceremony</label>
        <picklist>
            <picklistValues>
                <fullName>Front Patio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Patio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant/Back Patio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oaks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pavilion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cottage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranch House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant/Back Patio &amp; RNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star C Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dakota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Vineyards-Simi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vineyards-Simi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vineyards-Grandview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vineyards-Sunet Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vineyards-Mountain View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Dining Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paradise Cove-Bluff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garden Patio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paradise Cove-Pier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malibu Spa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secret Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M Café</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clicker__c</fullName>
        <label>Clicker</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conference_Type__c</fullName>
        <label>Conference Type</label>
        <picklist>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ropes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overnights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Interested__c</fullName>
        <label>Date Interested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decor_Props_Paper_Goods__c</fullName>
        <label>Decor/Props/Paper Goods</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <inlineHelpText>This is to date to book on the calendar</inlineHelpText>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_End_Time__c</fullName>
        <label>Event End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Start_Time__c</fullName>
        <label>Event Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Time_of_Day__c</fullName>
        <label>Event Time of Day</label>
        <picklist>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Final_Meeting_Date__c</fullName>
        <label>Final Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Meeting_Time__c</fullName>
        <label>Final Meeting Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Payment_Amount__c</fullName>
        <label>Final Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Payment_Date__c</fullName>
        <label>Final Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Payment_Due__c</fullName>
        <label>Final Payment Due</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Payment_Remarks__c</fullName>
        <label>Final Payment Remarks</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Payment__c</fullName>
        <label>Final Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (describe in Notes)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finish_Serving_at__c</fullName>
        <label>Finish Serving at:</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_Tasting_Date_Time__c</fullName>
        <label>Food Tasting Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hot_Dog_Bar_End__c</fullName>
        <label>Hot Dog Bar End</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hot_Dog_Bar_Start__c</fullName>
        <label>Hot Dog Bar Start</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>&quot;Here Come the Guide&quot; - Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;Here Comes the Guide&quot; - Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeddingLocation.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;InStyle&quot; Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifetime TV -&quot;I Do Diaries&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Our Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend Attended Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please describe)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_other__c</fullName>
        <label>How did you hear? (other)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <displayFormat>EV-{00000}</displayFormat>
        <label>Event ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Kids__c</fullName>
        <label>Kids</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_EventId__c</fullName>
        <externalId>true</externalId>
        <label>Legacy EventId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <label>Location Code</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Garden Patio / Main Dining Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garden Patio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Dining Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secret Garden / Ranch House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranch House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secret Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oaks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meadows/Barn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meadows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cottage / Pavilion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Forty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pavilion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cottage House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aspen 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aspen 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aspen 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aspen 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rose Cottage 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rose Cottage 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rose Cottage 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rose Cottage 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakeside 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakeside 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakeside 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pine Cabin 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pine Cabin 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pine Cabin 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pine Cabin 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Guarantee__c</fullName>
        <label>Minimum Guarantee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offsite_Address__c</fullName>
        <label>Offsite Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offsite_Directions__c</fullName>
        <label>Offsite Directions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offsite_Flowers__c</fullName>
        <label>Offsite Flowers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offsite_Phone__c</fullName>
        <label>Offsite Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Offsite_Rentals__c</fullName>
        <label>Offsite Rentals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Menu__c</fullName>
        <label>Party Menu</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Party_Occasion_Honoring__c</fullName>
        <label>Party Occasion/Honoring</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Notes__c</fullName>
        <label>Payment Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Per_Person__c</fullName>
        <label>$ Per Person</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Picnic_Site__c</fullName>
        <label>Picnic Site</label>
        <picklist>
            <picklistValues>
                <fullName>Atrium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barn-Cowboy Cookout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Picnic_Type__c</fullName>
        <label>Picnic Type</label>
        <picklist>
            <picklistValues>
                <fullName>Picnic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Picnic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OffSite</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Guarantee__c</fullName>
        <description>Banquet</description>
        <label>Price Guarantee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <picklist>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Public_Calendar_Id__c</fullName>
        <label>Public Calendar Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Calendar__c</fullName>
        <formula>IF(ISBLANK(Public_Calendar_Id__c), &apos;&apos;, HYPERLINK(&apos;/00U/c?cType=1&amp;cal_lkid=&apos;+Public_Calendar_Id__c, &apos;Visit Calendar&apos;, &apos;_parent&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Public Calendar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reception_Location__c</fullName>
        <label>Reception Location</label>
        <picklist>
            <picklistValues>
                <fullName>Front Patio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Patio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant/Back Patio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oaks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pavilion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cottage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranch House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant/Back Patio &amp; RNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star C Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dakota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Vineyards-Simi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vineyards-Simi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vineyards-Grandview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vineyards-Sunet Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vineyards-Mountain View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Dining Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paradise Cove-Bluff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garden Patio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paradise Cove-Pier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malibu Spa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secret Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M Café</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Remaining__c</fullName>
        <formula>Amount - ( X1st_Deposit_Amount__c + X2nd_Deposit_Amount__c + X3rd_Deposit_Amount__c + Adjustment_Amount__c + Final_Payment_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saturday_Fee__c</fullName>
        <description>Fees and Rates</description>
        <label>Saturday Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Fee__c</fullName>
        <label>% Service Fee</label>
        <picklist>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Cost__c</fullName>
        <label>Site Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Site_Fee__c</fullName>
        <label>Site Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Serving_At__c</fullName>
        <label>Start Serving at</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Svc_on_Food_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Svc on Food Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <description>based on Venue</description>
        <label>Tax Rate</label>
        <picklist>
            <picklistValues>
                <fullName>10.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.75</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tickets__c</fullName>
        <label>Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Bartender_Cost__c</fullName>
        <formula>Bartender_Cost__c  *  Total_Bartenders__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bartender Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Bartender_Fees__c</fullName>
        <formula>Total_Bartenders__c  *  Bartender_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bartender Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Bartenders__c</fullName>
        <label>Total Bartenders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_in_Attendance__c</fullName>
        <formula>Adults__c +  Kids__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total in Attendance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendors__c</fullName>
        <label>Vendors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <picklist>
            <picklistValues>
                <fullName>Calamigos Ranch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paradise Cove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victorian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vineyards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offsite</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wedding_Type__c</fullName>
        <label>Wedding Type</label>
        <picklist>
            <picklistValues>
                <fullName>Wedding Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reception Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding and Reception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding and Reception (outside catering)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1st_Deposit_Amount__c</fullName>
        <label>1st Deposit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>